tooling/nargo_cli/tests/snapshots/execution_success/fold_complex_outputs/execute__tests__fold_complex_outputs_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: Return variable contains a constant value
   ┌─ src/main.nr:68:5
   │
68 │     input.my_structs[1].z = input.my_structs[1].x + input.my_structs[1].y;
   │     ------------------- This variable contains a value which is constrained to be a constant. Consider removing this value as additional return values increase proving/verification time
   │
   = Call stack:
     1. src/main.nr:68:5
