tooling/nargo_cli/tests/snapshots/execution_success/fold_complex_outputs/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {
      "361444214588792908": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "14990209321349310352": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _29",
    "private parameters indices : [_0]",
    "public parameters indices : [_1]",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:32 bits []",
    "BLACKBOX::RANGE [_1]:32 bits []",
    "EXPR [ (1, _0) (1, _1) (-1, _2) 0 ]",
    "BLACKBOX::RANGE [_2]:32 bits []",
    "EXPR [ (-1, _3) 1 ]",
    "EXPR [ (-1, _4) 100 ]",
    "EXPR [ (-1, _5) 0 ]",
    "CALL func 1: PREDICATE: EXPR [ 1 ]",
    "inputs: [_3, _3, _3, _4, _0, _1, _2, _3, _3, _5, _5, _5, _5, _5, _0, _1, _2, _3, _3, _5, _5, _5, _5, _5], outputs: [_6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29]",
    "EXPR [ (1, _6) -1 ]",
    "EXPR [ (1, _7) -18 ]",
    "EXPR [ (1, _8) -1 ]",
    "EXPR [ (1, _10) -5 ]",
    "EXPR [ (1, _11) -3 ]",
    "EXPR [ (1, _12) -8 ]",
    "EXPR [ (1, _13) -1 ]",
    "EXPR [ (1, _14) -1 ]",
    "EXPR [ (1, _15) 0 ]",
    "EXPR [ (1, _16) 0 ]",
    "EXPR [ (1, _17) 0 ]",
    "EXPR [ (1, _18) 0 ]",
    "EXPR [ (1, _19) 0 ]",
    "EXPR [ (1, _20) -50 ]",
    "EXPR [ (1, _21) -30 ]",
    "EXPR [ (1, _22) -80 ]",
    "EXPR [ (1, _23) -5 ]",
    "EXPR [ (1, _24) -10 ]",
    "EXPR [ (1, _25) -15 ]",
    "EXPR [ (1, _26) -20 ]",
    "EXPR [ (1, _27) -25 ]",
    "EXPR [ (1, _28) -30 ]",
    "EXPR [ (1, _29) -35 ]",
    "func 1",
    "current witness index : _59",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23]",
    "public parameters indices : []",
    "return value indices : [_24, _25, _26, _27, _28, _29, _30, _31, _32, _33, _34, _35, _36, _37, _38, _39, _40, _41, _42, _43, _44, _45, _46, _47]",
    "BLACKBOX::RANGE [_3]:32 bits []",
    "BLACKBOX::RANGE [_4]:32 bits []",
    "BLACKBOX::RANGE [_5]:32 bits []",
    "BLACKBOX::RANGE [_6]:32 bits []",
    "BLACKBOX::RANGE [_7]:32 bits []",
    "BLACKBOX::RANGE [_8]:32 bits []",
    "BLACKBOX::RANGE [_9]:32 bits []",
    "BLACKBOX::RANGE [_10]:32 bits []",
    "BLACKBOX::RANGE [_11]:32 bits []",
    "BLACKBOX::RANGE [_12]:32 bits []",
    "BLACKBOX::RANGE [_13]:32 bits []",
    "BLACKBOX::RANGE [_14]:32 bits []",
    "BLACKBOX::RANGE [_15]:32 bits []",
    "BLACKBOX::RANGE [_16]:32 bits []",
    "BLACKBOX::RANGE [_17]:32 bits []",
    "BLACKBOX::RANGE [_18]:32 bits []",
    "BLACKBOX::RANGE [_19]:32 bits []",
    "BLACKBOX::RANGE [_20]:32 bits []",
    "BLACKBOX::RANGE [_21]:32 bits []",
    "BLACKBOX::RANGE [_22]:32 bits []",
    "BLACKBOX::RANGE [_23]:32 bits []",
    "EXPR [ (1, _7) (1, _8) (-1, _48) 0 ]",
    "BLACKBOX::RANGE [_48]:32 bits []",
    "EXPR [ (1, _9) (1, _48) (-1, _49) 0 ]",
    "BLACKBOX::RANGE [_49]:32 bits []",
    "EXPR [ (1, _10) (1, _49) (-1, _50) 0 ]",
    "BLACKBOX::RANGE [_50]:32 bits []",
    "EXPR [ (1, _11) (1, _50) (-1, _51) 0 ]",
    "BLACKBOX::RANGE [_51]:32 bits []",
    "EXPR [ (1, _12) (1, _51) (-1, _52) 0 ]",
    "BLACKBOX::RANGE [_52]:32 bits []",
    "EXPR [ (1, _13) (1, _52) (-1, _53) 0 ]",
    "BLACKBOX::RANGE [_53]:32 bits []",
    "EXPR [ (1, _4) (1, _5) (-1, _54) 0 ]",
    "BLACKBOX::RANGE [_54]:32 bits []",
    "EXPR [ (1, _6) (1, _54) (-1, _55) 0 ]",
    "BLACKBOX::RANGE [_55]:32 bits []",
    "EXPR [ (1, _53) (1, _55) (-1, _56) 0 ]",
    "BLACKBOX::RANGE [_56]:32 bits []",
    "EXPR [ (10, _14) (-1, _57) 0 ]",
    "BLACKBOX::RANGE [_57]:32 bits []",
    "EXPR [ (10, _15) (-1, _58) 0 ]",
    "BLACKBOX::RANGE [_58]:32 bits []",
    "EXPR [ (1, _57) (1, _58) (-1, _59) 0 ]",
    "BLACKBOX::RANGE [_59]:32 bits []",
    "EXPR [ (-1, _0) (1, _24) 0 ]",
    "EXPR [ (1, _25) (-1, _56) 0 ]",
    "EXPR [ (-1, _2) (1, _26) 0 ]",
    "EXPR [ (-1, _3) (1, _27) 0 ]",
    "EXPR [ (-1, _4) (1, _28) 0 ]",
    "EXPR [ (-1, _5) (1, _29) 0 ]",
    "EXPR [ (-1, _6) (1, _30) 0 ]",
    "EXPR [ (-1, _7) (1, _31) 0 ]",
    "EXPR [ (-1, _8) (1, _32) 0 ]",
    "EXPR [ (-1, _9) (1, _33) 0 ]",
    "EXPR [ (-1, _10) (1, _34) 0 ]",
    "EXPR [ (-1, _11) (1, _35) 0 ]",
    "EXPR [ (-1, _12) (1, _36) 0 ]",
    "EXPR [ (-1, _13) (1, _37) 0 ]",
    "EXPR [ (1, _38) (-1, _57) 0 ]",
    "EXPR [ (1, _39) (-1, _58) 0 ]",
    "EXPR [ (1, _40) (-1, _59) 0 ]",
    "EXPR [ (1, _41) -5 ]",
    "EXPR [ (1, _42) -10 ]",
    "EXPR [ (1, _43) -15 ]",
    "EXPR [ (1, _44) -20 ]",
    "EXPR [ (1, _45) -25 ]",
    "EXPR [ (1, _46) -30 ]",
    "EXPR [ (1, _47) -35 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
